src/app/event-details/event-details.component.css
.event-image {
    width:100%;
    height:auto;
}

.card-header {
    display: flex;
    padding: 12px;
    padding-bottom: 0;
    margin-top: 2px;
}

.share-div {
    text-align: right;
    padding:0;
    margin:0
}

.theme-header {
    padding-bottom: 3px;
}

.action-buttons {
    margin-left: auto;
    text-align: right;
}

.u-actions {
    text-align:center;
    margin-top: 5px;
}

.event-name {
    font-weight: bold;
    font-size: 1.2em;
    padding-left: 10px;
}

.event-time {
    color: whitesmoke;
    font-size: 1.0em;
    padding: 5px;
    padding-left: 10px;
    padding-bottom: 12px;
}

.description {
    padding-left: 10px;
    padding-right: 10px;
}

.event-body {
    max-width: 500px;
    margin: 0 auto;
}

.bodies {
    margin-top: 10px;
}

.right {
    margin: 20px;
    margin-bottom: 0;
}

.right .section {
    margin-bottom: 30px;
}

.right .section:nth-last-of-type(1) {
    margin-bottom: 0;
}

.right .rl-header {
    margin-bottom: 4px;
}

.follow-div {
    text-align: right;
    margin: -0.6em 0.4em 0.1em 0;
}

.follow-button {
    line-height: 2em;
    transition: background-color 0.2s ease;
    margin-left: 4px;
    margin-top: 2px;
}

.following {
    background-color: var(--accent-color);
    color: black;
}

span.badge {
    font-size: 0.8em;
}

.edit-fab {
    transform: translateZ(0);
    transition: transform 0.2s linear;
}

.edit-fab.gone {
    transform: scale(0.001) translateZ(0);
}

@media (min-width: 768px) {
    .follow-div {
        margin-top: -1em;
    }
}

